--- a/public/index.html
+++ b/public/index.html
@@ -39,17 +39,17 @@
 	<meta itemprop="name" content="Assistant for No Man&#39;s Sky">
 	<meta itemprop="description"
 		content="Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&#39;s Sky!!">
-	<meta itemprop="image" content="https://nomanssky.kurtlourens.com/favicon.ico">
+	<meta itemprop="image" content="https://nmsassistant.com/favicon.ico">
 
 	<!-- Facebook Meta Tags -->
-	<meta property="og:url" content="https://nomanssky.kurtlourens.com">
+	<meta property="og:url" content="https://nmsassistant.com">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Assistant for No Man&#39;s Sky">
 	<meta property="og:locale" content="en_US">
 	<meta property="og:description"
 		content="Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&#39;s Sky!!">
 	<meta property="og:site_name" content="Assistant for No Man&#39;s Sky">
-	<meta property="og:image" content="https://nomanssky.kurtlourens.com/favicon.ico">
+	<meta property="og:image" content="https://nmsassistant.com/favicon.ico">
 
 	<!-- Twitter Meta Tags -->
 	<meta name="twitter:site" content="@AssistantNMS">
@@ -57,7 +57,7 @@
 	<meta name="twitter:title" content="Assistant for No Man&#39;s Sky">
 	<meta name="twitter:description"
 		content="Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&#39;s Sky!!">
-	<meta name="twitter:image" content="https://nomanssky.kurtlourens.com/favicon.ico">
+	<meta name="twitter:image" content="https://nmsassistant.com/favicon.ico">
 	<!-- Meta Tags Generated via http://heymeta.com -->
 
 	<!-- Apple Meta Tags -->
