loading spinner on search

--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,7 @@
 	<meta name="msapplication-TileColor" content="#3F51B5">
 	<meta name="msapplication-config" content="/browserconfig.xml">
 
+	<link rel="preload" as="image" href="/assets/images/loader.svg">
 	<style>
 		.full-page-loader {
 			position: fixed;
