--- a/public/link/build1.html
+++ b/public/link/build1.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="https://nmsassistant.com/manifest.json" />
 
     <link rel="preload" href="/assets/images/loader.svg" as="image">
 
