--- a/public/link/build1.html
+++ b/public/link/build1.html
@@ -6,7 +6,7 @@
     <title>Large Freighter Room C - Assistant for No Man's Sky</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#2C7C9F" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="https://nmsassistant.com/manifest.json" />
 
@@ -14,7 +14,7 @@
 
     <link type="text/plain" rel="author" href="/humans.txt" />
     <meta name="application-name" content="Large Freighter Room C - Assistant for No Man&#39;s Sky">
-    <meta name="theme-color" content="#3F51B5">
+    <meta name="theme-color" content="#2C7C9F">
     <meta name="description" content="This expansion module allows for the rapid construction of habitable spaces inside large starships.
 
 Construction unit is fabricated complete with pressure bulkhead and all necessary attachment points.">
@@ -39,7 +39,7 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
     <meta itemprop="description" content="This expansion module allows for the rapid construction of habitable spaces inside large starships.
 
 Construction unit is fabricated complete with pressure bulkhead and all necessary attachment points.">
-    <meta itemprop="image" content="https://nmsassistant.com/assets/images/building/1.png">
+    <meta itemprop="image" content="https://cdn.nmsassistant.com/building/1.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://nmsassistant.com">
@@ -50,7 +50,7 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
 
 Construction unit is fabricated complete with pressure bulkhead and all necessary attachment points.">
     <meta property="og:site_name" content="Large Freighter Room C - Assistant for No Man&#39;s Sky">
-    <meta property="og:image" content="https://nmsassistant.com/assets/images/building/1.png">
+    <meta property="og:image" content="https://cdn.nmsassistant.com/building/1.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:site" content="@AssistantNMS">
@@ -59,13 +59,13 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
     <meta name="twitter:description" content="This expansion module allows for the rapid construction of habitable spaces inside large starships.
 
 Construction unit is fabricated complete with pressure bulkhead and all necessary attachment points.">
-    <meta name="twitter:image" content="https://nmsassistant.com/assets/images/building/1.png">
+    <meta name="twitter:image" content="https://cdn.nmsassistant.com/building/1.png">
     <!-- Meta Tags Generated via http://heymeta.com -->
 
     <!-- Apple Meta Tags -->
-    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#3F51B5">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#2C7C9F">
     <meta name="apple-itunes-app" content="app-id=id1480287625,app-argument=assistantNMSWeb">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://nmsassistant.com/assets/images/building/1.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.nmsassistant.com/building/1.png">
     <!-- <link rel="apple-touch-startup-image" href="/path/to/launch.png"> -->
     <meta name="apple-mobile-web-app-title" content="Large Freighter Room C - Assistant for No Man&#39;s Sky">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -79,7 +79,7 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
 
     <!-- Microsoft Meta Tags -->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="msapplication-TileColor" content="#3F51B5">
+    <meta name="msapplication-TileColor" content="#2C7C9F">
     <meta name="msapplication-config" content="/browserconfig.xml">
 
     <link rel="preload" as="image" href="/assets/images/loader.svg">
@@ -166,7 +166,7 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
         <h1>Large Freighter Room C - Assistant for No Man's Sky</h1>
         <div class="row border-bottom">
             <div style="background-color: 2C7C9F;">
-                <img src="/assets/images/building/1.png" title="Large Freighter Room C" draggable="false" alt="Large Freighter Room C">
+                <img src="https://cdn.nmsassistant.com/building/1.png" title="Large Freighter Room C" draggable="false" alt="Large Freighter Room C">
             </div>
             <div class="col-12 col-lg-10 col-md-10 col-sm-8 col-xs-9">
                 <h2>Large Freighter Room C</h2>
