better font loading

--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,27 @@
 			background-color: #333333;
 			opacity: 0.8;
 		}
+
+
+		@font-face {
+			font-family: 'NMSFuturaProBook';
+			src: url('/assets/font/nms/NMSFuturaProBook_Kerned.eot');
+			src: url('/assets/font/nms/NMSFuturaProBook_Kerned.eot?#iefix') format('embedded-opentype'),
+				url('/assets/font/nms/NMSFuturaProBook_Kerned.woff') format('woff'),
+				url('/assets/font/nms/NMSFuturaProBook_Kerned.ttf') format('truetype');
+			font-style: normal;
+			font-weight: normal;
+			text-rendering: optimizeLegibility;
+		}
+
+		@font-face {
+			font-family: 'NMSExpeditionAlphabet';
+			src: url('/assets/font/expeditionAlphabet/NMSExpeditionAlphabet.ttf');
+			src: url('/assets/font/expeditionAlphabet/NMSExpeditionAlphabet.ttf') format('truetype');
+			font-style: normal;
+			font-weight: normal;
+			text-rendering: optimizeLegibility;
+		}
 	</style>
 </head>
 
