--- a/public/link/build1.html
+++ b/public/link/build1.html
@@ -166,14 +166,16 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
         <h1>Large Freighter Room C - Assistant for No Man's Sky</h1>
         <div class="row border-bottom">
             <div style="background-color: 2C7C9F;">
-                <img src="https://cdn.nmsassistant.com/building/1.png" title="Large Freighter Room C" draggable="false" alt="Large Freighter Room C">
+                <img src="https://cdn.nmsassistant.com/building/1.png" title="Large Freighter Room C" draggable="false"
+                    alt="Large Freighter Room C">
             </div>
             <div class="col-12 col-lg-10 col-md-10 col-sm-8 col-xs-9">
                 <h2>Large Freighter Room C</h2>
                 <h3>Freighter Interior Module</h3>
                 <h5>This expansion module allows for the rapid construction of habitable spaces inside large starships.
 
-Construction unit is fabricated complete with pressure bulkhead and all necessary attachment points.</h5>
+                    Construction unit is fabricated complete with pressure bulkhead and all necessary attachment points.
+                </h5>
             </div>
         </div>
         <div class="full-page-loader opacity80"></div>
@@ -189,7 +191,31 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
     </div>
     <script>
         window.onload = function () {
-            window.location.replace('/catalogue-item/build1' + window.location.search);
+            try {
+                var fullString = window.location.search.replace('?', '');
+                var params = fullString.split('&')
+
+                var lang;
+                var name;
+                for (let paramIndex = 0; paramIndex < params.length; paramIndex++) {
+                    var param = params[paramIndex];
+                    var nameValue = param.split('=');
+                    if (nameValue[0].includes('lang')) {
+                        lang = nameValue[1]
+                        continue;
+                    }
+                    if (nameValue[0] != null) {
+                        name = nameValue[0]
+                    }
+                }
+                var urlSuffix = '';
+                if (lang != null) urlSuffix += '/' + lang;
+                if (name != null) urlSuffix += '/' + name;
+                window.location.replace('/catalogue-item/build1' + urlSuffix);
+            } catch (e) {
+                console.log(e)
+                window.location.replace('/catalogue-item/build1');
+            }
         }
     </script>
 </body>
