--- a/public/link/build1.html
+++ b/public/link/build1.html
@@ -153,9 +153,9 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
                 "description": "Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&amp;#39;s Sky!!"
             },
             "inLanguage": "en",
-            "dateCreated": "2021-11-07",
-            "dateModified": "2021-11-07",
-            "datePublished": "2021-11-07"
+            "dateCreated": "2021-11-22",
+            "dateModified": "2021-11-22",
+            "datePublished": "2021-11-22"
         }
     </script>
 </head>
@@ -166,16 +166,14 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
         <h1>Large Freighter Room C - Assistant for No Man's Sky</h1>
         <div class="row border-bottom">
             <div style="background-color: 2C7C9F;">
-                <img src="https://cdn.nmsassistant.com/building/1.png" title="Large Freighter Room C" draggable="false"
-                    alt="Large Freighter Room C">
+                <img src="https://cdn.nmsassistant.com/building/1.png" title="Large Freighter Room C" draggable="false" alt="Large Freighter Room C">
             </div>
             <div class="col-12 col-lg-10 col-md-10 col-sm-8 col-xs-9">
                 <h2>Large Freighter Room C</h2>
                 <h3>Freighter Interior Module</h3>
                 <h5>This expansion module allows for the rapid construction of habitable spaces inside large starships.
 
-                    Construction unit is fabricated complete with pressure bulkhead and all necessary attachment points.
-                </h5>
+Construction unit is fabricated complete with pressure bulkhead and all necessary attachment points.</h5>
             </div>
         </div>
         <div class="full-page-loader opacity80"></div>
