new seo pages and better descrip

--- a/public/link/build1.html
+++ b/public/link/build1.html
@@ -115,12 +115,8 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
             "image": "assets/images/icon.png",
             "applicationCategory": "Application",
             "operatingSystem": "Android Lollipop, iOS, Chrome, Firefox, Opera, Internet Explorer, Edge",
-            "softwareVersion": "function (context, options) {
-        return version;
-    }",
-            "version": "function (context, options) {
-        return version;
-    }",
+            "softwareVersion": "0.6.0",
+            "version": "0.6.0",
             "author": {
                 "@type": "Person",
                 "name": "Kurt Lourens",
@@ -153,9 +149,9 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
                 "description": "Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&amp;#39;s Sky!!"
             },
             "inLanguage": "en",
-            "dateCreated": "2022-01-30",
-            "dateModified": "2022-01-30",
-            "datePublished": "2022-01-30"
+            "dateCreated": "2022-02-07",
+            "dateModified": "2022-02-07",
+            "datePublished": "2022-02-07"
         }
     </script>
 </head>
