--- a/public/link/build1.html
+++ b/public/link/build1.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Assistant for No Man's Sky</title>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2C7C9F" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="https://nmsassistant.com/manifest.json" />
 
     <link rel="preload" href="/assets/images/loader.svg" as="image">
@@ -115,8 +115,8 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
             "image": "assets/images/icon.png",
             "applicationCategory": "Application",
             "operatingSystem": "Android Lollipop, iOS, Chrome, Firefox, Opera, Internet Explorer, Edge",
-            "softwareVersion": "0.9.1",
-            "version": "0.9.1",
+            "softwareVersion": "0.10.0",
+            "version": "0.10.0",
             "author": {
                 "@type": "Person",
                 "name": "Kurt Lourens",
@@ -149,9 +149,9 @@ Construction unit is fabricated complete with pressure bulkhead and all necessar
                 "description": "Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&amp;#39;s Sky!!"
             },
             "inLanguage": "en",
-            "dateCreated": "2022-03-16",
-            "dateModified": "2022-03-16",
-            "datePublished": "2022-03-16"
+            "dateCreated": "2022-03-29",
+            "dateModified": "2022-03-29",
+            "datePublished": "2022-03-29"
         }
     </script>
 </head>
