--- a/public/index.html
+++ b/public/index.html
@@ -143,6 +143,6 @@
 	</div>
 </body>
 
-<script async defer src="https://assistantapps.github.io/WebComponents/build/bundle.js"></script>
+<script async defer src="https://webcomp.assistantapps.com/build/bundle.js"></script>
 
 </html>
