🚧 More Overwolf migration

--- a/overwolf/src/desktop/desktop.html
+++ b/overwolf/src/desktop/desktop.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Assistant for No Man's Sky - Desktop page</title>
+    <!-- This file is unused -->
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Assistant for No Man's Sky - Desktop page</title>
-  <!-- This file is unused -->
-</head>
+  <body class="desktop">
+    <!-- -------------------------------- Header ------------------------------- -->
 
-<body class="desktop">
-  <!-- -------------------------------- Header ------------------------------- -->
-
-  <header id="header" class="app-header">
-    <img src="../../img/header_icon.svg" />
-    <h1>Assistant for No Man's Sky</h1>
-    <div class="window-controls-group">
-      <button id="minimizeButton" class="window-control window-control-minimize" />
-      <button id="maximizeButton" class="window-control window-control-maximize" />
-      <button id="closeButton" class="window-control window-control-close" />
-    </div>
-  </header>
-
-</body>
-
+    <header id="header" class="app-header">
+      <img src="../../assets/images/header_icon.png" />
+      <h1>Assistant for No Man's Sky</h1>
+      <div class="window-controls-group">
+        <button
+          id="minimizeButton"
+          class="window-control window-control-minimize"
+        ></button>
+        <button
+          id="maximizeButton"
+          class="window-control window-control-maximize"
+        ></button>
+        <button
+          id="closeButton"
+          class="window-control window-control-close"
+        ></button>
+      </div>
+    </header>
+  </body>
 </html>
